[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/Quarto2.gd" type="Script" id=1]
[ext_resource path="res://scenes/meshes/quarto2.scn" type="PackedScene" id=2]
[ext_resource path="res://assets/panel.png" type="Texture" id=3]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=4]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scenes/meshes/hakuTrue.scn" type="PackedScene" id=7]
[ext_resource path="res://scenes/meshes/hanaga2.scn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Expression.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/SMRT/dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/fonts/Pixel_Berry_08_84_Ltd.Edition.TTF" type="DynamicFontData" id=11]

[sub_resource type="Environment" id=1]

ambient_light/enabled = true
ambient_light/color = Color( 0.199219, 0.186074, 0.126068, 1 )
ambient_light/energy = 1.0
fxaa/enabled = false
background/mode = 1
background/color = Color( 0, 0, 0, 1 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.0
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1, 1, 4.76227 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 4.38995, 3.27907, 6.63808 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 5.94276, 6.9301, 1.975 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 3.29949, 1, 6.41923 )

[sub_resource type="BoxShape" id=6]

extents = Vector3( 1.19572, 3.71602, 3.82511 )

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 11 )

[node name="Quarto2" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="quarto2" parent="." instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.663414, -0.383022, 0.642788, 0.0252013, 0.870002, 0.492404, -0.747828, -0.310468, 0.586824, 34.8931, 25.7205, 33.5145 )
projection = 1
size = 45.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.830728, -0.381055, 0.405817, 0, 0.728998, 0.684516, -0.556678, -0.568647, 0.605599, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="DialogPanel" type="Patch9Frame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 421.0
margin/right = 991.0
margin/bottom = 584.0
texture = ExtResource( 3 )
patch_margin/left = 20
patch_margin/top = 4
patch_margin/right = 20
patch_margin/bottom = 4

[node name="TIE" type="ReferenceFrame" parent="DialogPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 20.0
margin/right = 942.0
margin/bottom = 147.0
script/script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = ExtResource( 6 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="Areas" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="AreaPorta" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0587, -6.31948, 12.9519 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaPorta"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.0587, -6.31948, 12.9519 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="AreaCama" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1617, -3.38222, -7.71467 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaCama"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.1617, -3.38222, -7.71467 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AreaArmario" type="Area" parent="Areas"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.356, -0.15752, -10.3353 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaArmario"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.356, -0.15752, -10.3353 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="AreaMesa" type="Area" parent="Areas"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0711, -3.40394, 14.71 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaMesa"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0711, -3.40394, 14.71 )
shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[node name="AreaQuadro" type="Area" parent="Areas"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8502, 3.39187, 3.68605 )
shapes/0/trigger = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Areas/AreaQuadro"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8502, 3.39187, 3.68605 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="Haku" parent="." instance=ExtResource( 7 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.1106, -2.91572, 14.7906 )

[node name="Hanaga" parent="." instance=ExtResource( 8 )]

transform/local = Transform( 3.71555, 0, 0, 0, 3.71555, 0, 0, 0, 3.71555, 3.11857, -2.63923, -3.2837 )
visibility/visible = false

[node name="Expression" parent="Hanaga" instance=ExtResource( 9 )]

transform/local = Transform( 0.373988, 0, 0, 0, 0.373988, 0, 0, 0, 0.373988, 0, 3.44807, 0 )

[node name="AreaHanaga" type="Area" parent="Hanaga"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 1
collision/mask = 1

[node name="CollisionShape" type="CollisionShape" parent="Hanaga/AreaHanaga"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 7 )
trigger = true
_update_shape_index = 0

[node name="Canvas" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="dialog" parent="Canvas" instance=ExtResource( 10 )]

margin/left = 31.0
margin/top = 412.0
margin/right = 30.0
margin/bottom = 40.0
texture = ExtResource( 3 )
patch_margin/left = 20
patch_margin/right = 20
language = "res://dialog.lan"
font = SubResource( 8 )
font_size = 20
dialog_frame_height = 3
show_debug_messages = false

[connection signal="buff_end" from="DialogPanel/TIE" to="." method="_on_TIE_buff_end"]

[connection signal="body_enter" from="Areas/AreaPorta" to="." method="_on_AreaPorta_body_enter"]

[connection signal="body_exit" from="Areas/AreaPorta" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaCama" to="." method="_on_AreaCama_body_enter"]

[connection signal="body_exit" from="Areas/AreaCama" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaArmario" to="." method="_on_AreaArmario_body_enter"]

[connection signal="body_exit" from="Areas/AreaArmario" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Areas/AreaQuadro" to="." method="_on_AreaQuadro_body_enter"]

[connection signal="body_exit" from="Areas/AreaQuadro" to="." method="_on_Area_body_exit"]

[connection signal="body_enter" from="Hanaga/AreaHanaga" to="." method="_on_AreaHanaga_body_enter"]

[connection signal="body_exit" from="Hanaga/AreaHanaga" to="." method="_on_Area_body_exit"]

[connection signal="dialog_control" from="Canvas/dialog" to="." method="_on_dialog_dialog_control"]

[connection signal="finished" from="Canvas/dialog" to="." method="_on_dialog_finished"]


